# twitch-notifier

./: .dockerignore  .gitignore  Dockerfile  README.md  config.sample.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: docker-dev.yaml  release.yaml
twitch-notifier/: __init__.py
