[tool.poetry]
name = "twitch-notifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
mastodon-py = "1.8.1"
twitchapi = "4.2.0"
python-twitter = "3.5"
discord-py = ">=2.1.0,<2.4.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
